--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h1>YES!</h1>
         </aside>
         <div class="container-image">
-          <img src="img/fork.png" desc="Photo by <a href='https://unsplash.com/@dav_billings?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>David Billings</a> on <a href='https://unsplash.com/s/photos/fork?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a>"/>
+          <img src="../img/fork.png" desc="Photo by <a href='https://unsplash.com/@dav_billings?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>David Billings</a> on <a href='https://unsplash.com/s/photos/fork?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a>"/>
         </div>
       </div>
       <!-- for the shape -->
