--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <h1>Door Delievery</h1>
       <nav class="nav-bar">
         <ul>
-          <li><a href="index.html"><span>H</span>ome</a></li>
-          <li><a href="price.html"><span>P</span>rices</a></li>
-          <li><a href="joinus.html"><span>J</span>oin Us</a></li>
+          <li><a href="#main_info"><span>H</span>ome</a></li>
+          <li><a href="#services"><span>S</span>ervices</a></li>
+          <li><a href="#team"><span>J</span>oin Us</a></li>
         </ul>
       </nav>
     </header>
     <div class="container">
       <div class="container-info">
-        <aside id="my_info">
+        <aside id="main_info">
           <!-- <h1>Hi,</h1> -->
           <h1>Get your food and groceries delievered to your <span>Dorm Room</span></h1>
           <h1>YES!</h1>
@@ -38,7 +38,7 @@
         <img src="img/shape.png" alt="shape"/>
       </div> -->
       <div class="info" id="work">
-        <h1>Why us?</h1>
+        <h1><span>Why</span> us?</h1>
         <p>We provide food and grocery to your dorm room.
         </p>
       </div>
@@ -47,10 +47,31 @@
       </div>
 
       <div class="info" id="contact_info">
-        <h1>Mission Statement</h1>
+        <h1><span>Mission</span> Statement</h1>
         <p>Our main mission is to make sure that the customer have the best possible value with the best possible price.</p>
         <p> Our unique value proposition that separates us from our competition is the fact that we can deliver at your dorm door.</p>
         <p>We believe in delivering good as efficiently as possible.</p>
+      </div>
+      <!-- for the shape -->
+      <div id="rectangle">
+      </div>
+
+      <div class="info" id="services">
+        <h1><span>Services</span> and prices</h1>
+        <p>Really affordable charge starting from $0.82 (excluding Tax)</p>
+        <p>Target Food Chains: Tim Hortons, McDonalds, Subway, A&W</p>
+        <p>Target grocery Stores: Real Canadian Superstore, Walmart, Safeway</p>
+        <p>Food delievery every hour and grocery every 3 hours </p>
+      </div>
+      <!-- for the shape -->
+      <div id="rectangle">
+      </div>
+
+      <div class="info" id="team">
+        <h1><span>Our</span> Team</h1>
+        <p>Founders: Jassjot Singh and Sahil Shrestha</p>
+        <p>We are looking for Delievery drivers. Work in your own schedule around the campus. </p>
+
       </div>
       <!-- for the shape -->
       <div id="rectangle">
