Trying out images

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
       <div id="rectangle">
       </div>
 
+      <div class="info" id="services">
+        <h1><span>Our </span>Competitiors</h1>
+        <div>
+          <img src="img/mcdonalds.jpeg"/>
+        </div>
+
+      </div>
+      <!-- for the shape -->
+      <div id="rectangle">
+      </div>
+
       <div class="info" id="team">
         <h1><span>Our</span> Team</h1>
         <p>Founders: Jassjot Singh and Sahil Shrestha</p>
