Trying to include all the images

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
 
       <div class="info" id="services">
         <h1><span>Our </span>Competitiors</h1>
-        <div>
-          <img src="img/mcdonalds.jpeg"/>
+        <div id="image_container">
+          <img src="img/mcdonalds.jpeg" class ="cotainer-image2"/>
+          <img src="img/a&w.jpeg" class ="cotainer-image2"/>
+          <img src="img/kfc.jpeg" class ="cotainer-image2"/>
         </div>
 
       </div>
